# lab1os

.github/workflows/: vtkm.yml  vtsh.yml
lab/vtsh/: .clang-tidy  CMakeLists.txt  lab1.docx
lab/vtsh/lib/: CMakeLists.txt  ema_sort.c  ema_sort.h  vtsh.c  vtsh.h
lab/vtsh/test/: base_test.py  shell.py  test_basics.py  test_redirection.py
